--- a/.github/workflows/bump.yaml
+++ b/.github/workflows/bump.yaml
@@ -18,7 +18,7 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-      - uses: actions/setup-cz@main
+      - uses: commitizen-tools/setup-cz@main
       - uses: pndurette/gh-actions-auto-docs@v1
         with:
           git_push: false
